--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -141,12 +141,14 @@
      "compiledClasses": [
       "Line_5_jupyter",
       "Line_6_jupyter",
-      "Line_5_jupyter"
+      "Line_5_jupyter",
+      "Line_7_jupyter",
+      "Line_6_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:24:14.803280Z",
-     "start_time": "2025-10-26T10:24:14.719263Z"
+     "end_time": "2025-10-26T10:36:06.419543Z",
+     "start_time": "2025-10-26T10:36:06.339880Z"
     }
    },
    "cell_type": "code",
@@ -163,10 +165,11 @@
     "\n",
     "assert(provider() == 1)\n",
     "assert(provider() == 2)\n",
-    "assert(provider() == 3)"
+    "assert(provider() == 3)\n",
+    "assert(provider() == null)"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
