--- a/src/main/Lists.ipynb
+++ b/src/main/Lists.ipynb
@@ -122,8 +122,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:24:26.534261Z",
-     "start_time": "2025-10-26T10:24:26.495010Z"
+     "end_time": "2025-10-26T10:35:55.577769Z",
+     "start_time": "2025-10-26T10:35:55.540262Z"
     }
    },
    "cell_type": "code",
@@ -135,7 +135,8 @@
     "\n",
     "assert(provider() == 1)\n",
     "assert(provider() == 2)\n",
-    "assert(provider() == 3)"
+    "assert(provider() == 3)\n",
+    "assert(provider() == null)"
    ],
    "outputs": [
     {
@@ -144,8 +145,8 @@
      "output_type": "error",
      "traceback": [
       "kotlin.NotImplementedError: An operation is not implemented.",
-      "\tat Line_28_jupyter.provider(Line_28.jupyter.kts:2) at Cell In[27], line 2",
-      "\tat Line_28_jupyter.<init>(Line_28.jupyter.kts:4) at Cell In[27], line 4",
+      "\tat Line_30_jupyter.provider(Line_30.jupyter.kts:2) at Cell In[29], line 2",
+      "\tat Line_30_jupyter.<init>(Line_30.jupyter.kts:4) at Cell In[29], line 4",
       "\tat java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)",
       "\tat java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)",
       "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)",
@@ -191,11 +192,11 @@
       "\tat kotlin.concurrent.ThreadsKt$thread$thread$1.run(Thread.kt:30)",
       "",
       "kotlin.NotImplementedError: An operation is not implemented.",
-      "at Cell In[27], line 2"
+      "at Cell In[29], line 2"
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 29
   },
   {
    "metadata": {},
