--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -130,7 +130,7 @@
     "Did the solution make multiple passes through the list?  If so, we might need a re-think.\n",
     "\n",
     "It turns out the function now needs to handle a case where the list of numbers may be too big to hold in memory. Instead\n",
-    "of passing the list, we instead pass a function that returns the next element in the list.\n",
+    "of passing the list, we instead pass a function that returns the next element in a (possibly long) series of numbers.\n",
     "\n",
     "For testing purposes, we need to write small utility function that converts a list into this kind of function. Just for show, we make it an extension function:"
    ]
@@ -143,12 +143,14 @@
       "Line_6_jupyter",
       "Line_5_jupyter",
       "Line_7_jupyter",
-      "Line_6_jupyter"
+      "Line_6_jupyter",
+      "Line_8_jupyter",
+      "Line_7_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:36:06.419543Z",
-     "start_time": "2025-10-26T10:36:06.339880Z"
+     "end_time": "2025-10-26T10:36:28.606900Z",
+     "start_time": "2025-10-26T10:36:28.537879Z"
     }
    },
    "cell_type": "code",
@@ -169,7 +171,7 @@
     "assert(provider() == null)"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {},
