Oops.  assert doesn't do much without -ea, which seems to be off in notebooks ...

--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -15,22 +15,24 @@
     "executionRelatedData": {
      "compiledClasses": [
       "Line_3_jupyter",
+      "Line_2_jupyter",
+      "Line_19_jupyter",
       "Line_2_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:23:20.917031Z",
-     "start_time": "2025-10-26T10:23:20.752676Z"
+     "end_time": "2025-10-26T13:55:27.273337Z",
+     "start_time": "2025-10-26T13:55:27.231630Z"
     }
    },
    "cell_type": "code",
    "source": [
     "fun pruneList(list: List<Int>, threshold: Int): List<Int> = list.filter { it >= threshold }\n",
     "\n",
-    "assert(pruneList(listOf(1, 2, 3, 4, 5, 6), 5) == listOf(5, 6))"
+    "require(pruneList(listOf(1, 2, 3, 4, 5, 6), 5) == listOf(5, 6))"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -42,22 +44,24 @@
     "executionRelatedData": {
      "compiledClasses": [
       "Line_6_jupyter",
+      "Line_3_jupyter",
+      "Line_20_jupyter",
       "Line_3_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:23:22.049715Z",
-     "start_time": "2025-10-26T10:23:21.978069Z"
+     "end_time": "2025-10-26T13:55:31.751618Z",
+     "start_time": "2025-10-26T13:55:31.720113Z"
     }
    },
    "cell_type": "code",
    "source": [
     "fun smallest(list: List<Int>): Int = list.min()\n",
     "\n",
-    "assert(smallest(listOf(5, 3, 2, 4)) == 2)"
+    "require(smallest(listOf(5, 3, 2, 4)) == 2)"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -79,12 +83,20 @@
       "Line_8_jupyter",
       "Line_23_jupyter",
       "Line_8_jupyter",
-      "Line_4_jupyter"
+      "Line_4_jupyter",
+      "Line_13_jupyter",
+      "Line_4_jupyter",
+      "Line_14_jupyter",
+      "Line_13_jupyter",
+      "Line_16_jupyter",
+      "Line_14_jupyter",
+      "Line_21_jupyter",
+      "Line_16_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:23:23.843990Z",
-     "start_time": "2025-10-26T10:23:23.622959Z"
+     "end_time": "2025-10-26T13:55:37.677386Z",
+     "start_time": "2025-10-26T13:55:37.579196Z"
     }
    },
    "cell_type": "code",
@@ -115,13 +127,21 @@
     "\n",
     "val stats = stats(listOf(1, 2, 3, 4, 5))\n",
     "\n",
-    "assert(stats.min == 1)\n",
-    "assert(stats.max == 5)\n",
-    "assert(stats.mean == 3.0)\n",
-    "assert(stats.sum == 15L)"
+    "require(stats.min == 1)\n",
+    "require(stats.max == 5)\n",
+    "require(stats.mean == 3.0)\n",
+    "require(stats.sum == 15L)"
    ],
-   "outputs": [],
-   "execution_count": 3
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StatsImpl(min=1, max=5, sum=15, mean=3.0)\n"
+     ]
+    }
+   ],
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -145,12 +165,15 @@
       "Line_7_jupyter",
       "Line_6_jupyter",
       "Line_8_jupyter",
-      "Line_7_jupyter"
+      "Line_7_jupyter",
+      "Line_24_jupyter",
+      "Line_8_jupyter",
+      "Line_25_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:36:28.606900Z",
-     "start_time": "2025-10-26T10:36:28.537879Z"
+     "end_time": "2025-10-26T13:56:38.102848Z",
+     "start_time": "2025-10-26T13:56:38.045490Z"
     }
    },
    "cell_type": "code",
@@ -159,19 +182,19 @@
     "fun List<Int>.provider(): () -> Int? {\n",
     "    var index = 0\n",
     "    return {\n",
-    "        takeIf { size < index }?.let { get(index).also { index++ } }\n",
+    "        takeIf { index < size }?.let { get(index).also { index++ } }\n",
     "    }\n",
     "}\n",
     "\n",
     "val provider = listOf(1,2,3).provider()\n",
     "\n",
-    "assert(provider() == 1)\n",
-    "assert(provider() == 2)\n",
-    "assert(provider() == 3)\n",
-    "assert(provider() == null)"
+    "require(provider() == 1)\n",
+    "require(provider() == 2)\n",
+    "require(provider() == 3)\n",
+    "require(provider() == null)"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -190,17 +213,26 @@
       "Line_22_jupyter",
       "Line_21_jupyter",
       "Line_24_jupyter",
-      "Line_22_jupyter"
+      "Line_22_jupyter",
+      "Line_9_jupyter",
+      "Line_10_jupyter",
+      "Line_9_jupyter",
+      "Line_11_jupyter",
+      "Line_10_jupyter",
+      "Line_12_jupyter",
+      "Line_11_jupyter",
+      "Line_27_jupyter",
+      "Line_12_jupyter",
+      "Line_28_jupyter",
+      "Line_27_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:00:23.107184Z",
-     "start_time": "2025-10-26T10:00:22.945031Z"
+     "end_time": "2025-10-26T13:57:17.009609Z",
+     "start_time": "2025-10-26T13:57:16.810328Z"
     }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 23,
    "source": [
     "import java.math.BigInteger\n",
     "\n",
@@ -234,17 +266,16 @@
     "}\n",
     "\n",
     "fun stats(list: () -> Int?): Stats {\n",
-    "    val fold: StatsImpl = generateSequence(list).fold(\n",
+    "    return generateSequence(list).fold(\n",
     "        StatsImpl(),\n",
     "        StatsImpl::plus\n",
     "    )\n",
-    "    return fold as Stats\n",
     "}\n",
     "\n",
     "fun List<Int>.provider(): () -> Int? {\n",
     "    var index = 0\n",
     "    return {\n",
-    "        takeIf { size < index }?.let { get(index).also { index++ } }\n",
+    "        takeIf { index < size }?.let { get(index).also { index++ } }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -252,11 +283,21 @@
     "\n",
     "val stats = stats(provider)\n",
     "\n",
-    "assert(stats.min == 1)\n",
-    "assert(stats.max == 5)\n",
-    "assert(stats.mean == 3.0)\n",
-    "assert(stats.sum == 15.toBigInteger())"
-   ]
+    "require(stats.min == 1)\n",
+    "require(stats.max == 5)\n",
+    "require(stats.mean == 3.0)\n",
+    "require(stats.sum == 15.toBigInteger())"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StatsImpl(min=1, max=5, sum=15, count=5)\n"
+     ]
+    }
+   ],
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -273,12 +314,16 @@
      "compiledClasses": [
       "Line_25_jupyter",
       "Line_26_jupyter",
-      "Line_25_jupyter"
+      "Line_25_jupyter",
+      "Line_30_jupyter",
+      "Line_25_jupyter",
+      "Line_31_jupyter",
+      "Line_30_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:10:44.354679Z",
-     "start_time": "2025-10-26T10:10:44.301995Z"
+     "end_time": "2025-10-26T13:57:50.311805Z",
+     "start_time": "2025-10-26T13:57:50.258273Z"
     }
    },
    "cell_type": "code",
@@ -289,7 +334,7 @@
     "fun List<Int>.provider(): () -> Int? {\n",
     "    var index = 0\n",
     "    return {\n",
-    "        takeIf { size < index }?.let { get(index).also { index++ } }\n",
+    "        takeIf { index < size }?.let { get(index).also { index++ } }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -297,10 +342,10 @@
     "val processor: (Int, Int) -> Int = { i1, i2 -> i1 + i2 }\n",
     "val provider = listOf(1, 2, 3, 4, 5).provider()\n",
     "\n",
-    "assert(stats(provider, initial, processor) == 15)\n"
+    "require(stats(provider, initial, processor) == 15)\n"
    ],
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 30
   }
  ],
  "metadata": {
