--- a/src/main/Lists.ipynb
+++ b/src/main/Lists.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "fun pruneList(list: List<Int>, threshold: Int): List<Int> = TODO()\n",
     "\n",
-    "assert(pruneList(listOf(1, 2, 3, 4, 5, 6), 5) == listOf(5, 6))"
+    "require(pruneList(listOf(1, 2, 3, 4, 5, 6), 5) == listOf(5, 6))"
    ],
    "outputs": [
     {
@@ -109,7 +109,7 @@
    "source": [
     "fun smallest(list: List<Int>): Int = TODO()\n",
     "\n",
-    "assert(smallest(listOf(5, 3, 2, 4)) == 2)"
+    "require(smallest(listOf(5, 3, 2, 4)) == 2)"
    ],
    "outputs": [
     {
@@ -196,8 +196,8 @@
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T13:45:16.339866Z",
-     "start_time": "2025-10-26T13:45:16.237057Z"
+     "end_time": "2025-10-26T13:51:32.159596Z",
+     "start_time": "2025-10-26T13:51:32.094291Z"
     }
    },
    "cell_type": "code",
@@ -213,10 +213,10 @@
     "\n",
     "val stats = stats(listOf(1, 2, 3, 4, 5))\n",
     "\n",
-    "assert(stats.min == 1)\n",
-    "assert(stats.max == 5)\n",
-    "assert(stats.mean == 3.0)\n",
-    "assert(stats.sum == 15L)"
+    "require(stats.min == 1)\n",
+    "require(stats.max == 5)\n",
+    "require(stats.mean == 3.0)\n",
+    "require(stats.sum == 15L)"
    ],
    "outputs": [
     {
@@ -225,8 +225,8 @@
      "output_type": "error",
      "traceback": [
       "kotlin.NotImplementedError: An operation is not implemented.",
-      "\tat Line_34_jupyter.stats(Line_34.jupyter.kts:8) at Cell In[33], line 8",
-      "\tat Line_34_jupyter.<init>(Line_34.jupyter.kts:10) at Cell In[33], line 10",
+      "\tat Line_35_jupyter.stats(Line_35.jupyter.kts:8) at Cell In[34], line 8",
+      "\tat Line_35_jupyter.<init>(Line_35.jupyter.kts:10) at Cell In[34], line 10",
       "\tat java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)",
       "\tat java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)",
       "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)",
@@ -272,11 +272,11 @@
       "\tat kotlin.concurrent.ThreadsKt$thread$thread$1.run(Thread.kt:30)",
       "",
       "kotlin.NotImplementedError: An operation is not implemented.",
-      "at Cell In[33], line 8"
+      "at Cell In[34], line 8"
      ]
     }
    ],
-   "execution_count": 33
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -304,10 +304,10 @@
     "\n",
     "val provider = listOf(1,2,3).provider()\n",
     "\n",
-    "assert(provider() == 1)\n",
-    "assert(provider() == 2)\n",
-    "assert(provider() == 3)\n",
-    "assert(provider() == null)"
+    "require(provider() == 1)\n",
+    "require(provider() == 2)\n",
+    "require(provider() == 3)\n",
+    "require(provider() == null)"
    ],
    "outputs": [
     {
@@ -413,10 +413,10 @@
     "\n",
     "val stats = stats(provider)\n",
     "\n",
-    "assert(stats.min == 1)\n",
-    "assert(stats.max == 5)\n",
-    "assert(stats.mean == 3.0)\n",
-    "assert(stats.sum == 15.toBigInteger())"
+    "require(stats.min == 1)\n",
+    "require(stats.max == 5)\n",
+    "require(stats.mean == 3.0)\n",
+    "require(stats.sum == 15.toBigInteger())"
    ],
    "outputs": [
     {
@@ -511,7 +511,7 @@
     "val processor: (Int, Int) -> Int = { i1, i2 -> i1 + i2 }\n",
     "val provider = listOf(1, 2, 3, 4, 5).provider()\n",
     "\n",
-    "assert(stats(provider, initial, processor) == 15)\n"
+    "require(stats(provider, initial, processor) == 15)\n"
    ],
    "outputs": [],
    "execution_count": 25
