--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -17,12 +17,14 @@
       "Line_3_jupyter",
       "Line_2_jupyter",
       "Line_19_jupyter",
-      "Line_2_jupyter"
+      "Line_2_jupyter",
+      "Line_32_jupyter",
+      "Line_19_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T13:55:27.273337Z",
-     "start_time": "2025-10-26T13:55:27.231630Z"
+     "end_time": "2025-10-26T14:05:57.746704Z",
+     "start_time": "2025-10-26T14:05:57.707764Z"
     }
    },
    "cell_type": "code",
@@ -32,7 +34,7 @@
     "require(pruneList(listOf(1, 2, 3, 4, 5, 6), 5) == listOf(5, 6))"
    ],
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -91,12 +93,14 @@
       "Line_16_jupyter",
       "Line_14_jupyter",
       "Line_21_jupyter",
-      "Line_16_jupyter"
+      "Line_16_jupyter",
+      "Line_33_jupyter",
+      "Line_21_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T13:55:37.677386Z",
-     "start_time": "2025-10-26T13:55:37.579196Z"
+     "end_time": "2025-10-26T14:07:53.880767Z",
+     "start_time": "2025-10-26T14:07:53.800188Z"
     }
    },
    "cell_type": "code",
@@ -121,8 +125,8 @@
     "fun stats(list: List<Int>): Stats = StatsImpl(\n",
     "    list.min(),\n",
     "    list.max(),\n",
-    "    list.map { it.toLong() }.sum(),\n",
-    "    list.map { it.toLong() }.sum().toDouble() / list.size,\n",
+    "    list.sumOf { it.toLong() },\n",
+    "    list.sumOf { it.toDouble() } / list.size,\n",
     ")\n",
     "\n",
     "val stats = stats(listOf(1, 2, 3, 4, 5))\n",
@@ -132,16 +136,8 @@
     "require(stats.mean == 3.0)\n",
     "require(stats.sum == 15L)"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "StatsImpl(min=1, max=5, sum=15, mean=3.0)\n"
-     ]
-    }
-   ],
-   "execution_count": 20
+   "outputs": [],
+   "execution_count": 32
   },
   {
    "metadata": {},
