--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -69,11 +69,14 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "This function should return stats about the list:\n",
+    "The `stats` function should return more general stats about the list:\n",
+    "\n",
     "* Min value\n",
     "* Max value\n",
     "* Sum of all values\n",
-    "* Mean of all values"
+    "* Mean of all values\n",
+    "\n",
+    "We have a `Stats` interface which captures all of these:"
    ]
   },
   {
@@ -220,12 +223,14 @@
       "Line_27_jupyter",
       "Line_12_jupyter",
       "Line_28_jupyter",
-      "Line_27_jupyter"
+      "Line_27_jupyter",
+      "Line_34_jupyter",
+      "Line_28_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T13:57:17.009609Z",
-     "start_time": "2025-10-26T13:57:16.810328Z"
+     "end_time": "2025-10-26T14:09:02.100745Z",
+     "start_time": "2025-10-26T14:09:01.914170Z"
     }
    },
    "cell_type": "code",
@@ -284,16 +289,8 @@
     "require(stats.mean == 3.0)\n",
     "require(stats.sum == 15.toBigInteger())"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "StatsImpl(min=1, max=5, sum=15, count=5)\n"
-     ]
-    }
-   ],
-   "execution_count": 27
+   "outputs": [],
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -301,7 +298,7 @@
    "source": [
     "In another bizarre twist of fate, it now turns out that our list traversal logic is noticed by our colleagues.  They see it as a stable and mature infrastructure, and they want to \"hook into\" our code with completely arbitary processing logic.  Make it generic!\n",
     "\n",
-    "The below example is a simple \"sum\" function which hooks into our wonderful machine:"
+    "The below example is a simple \"sum\" function which hooks into our wonderful machine, generically named `process`:"
    ]
   },
   {
@@ -324,7 +321,7 @@
    },
    "cell_type": "code",
    "source": [
-    "fun <S> stats(list: () -> Int?, initial: () -> S, processor: (S, Int) -> S): S =\n",
+    "fun <S> process(list: () -> Int?, initial: () -> S, processor: (S, Int) -> S): S =\n",
     "    generateSequence(list).fold(initial(), processor)\n",
     "\n",
     "fun List<Int>.provider(): () -> Int? {\n",
@@ -338,7 +335,7 @@
     "val processor: (Int, Int) -> Int = { i1, i2 -> i1 + i2 }\n",
     "val provider = listOf(1, 2, 3, 4, 5).provider()\n",
     "\n",
-    "require(stats(provider, initial, processor) == 15)\n"
+    "require(process(provider, initial, processor) == 15)\n"
    ],
    "outputs": [],
    "execution_count": 30
