--- a/src/main/Lists.ipynb
+++ b/src/main/Lists.ipynb
@@ -24,6 +24,9 @@
    },
    "cell_type": "code",
    "source": [
+    "/**\n",
+    " * Implement me!\n",
+    " */\n",
     "fun pruneList(list: List<Int>, threshold: Int): List<Int> = TODO()\n",
     "\n",
     "require(pruneList(listOf(1, 2, 3, 4, 5, 6), 5) == listOf(5, 6))"
@@ -107,6 +110,9 @@
    },
    "cell_type": "code",
    "source": [
+    "/**\n",
+    " * Implement me!\n",
+    " */\n",
     "fun smallest(list: List<Int>): Int = TODO()\n",
     "\n",
     "require(smallest(listOf(5, 3, 2, 4)) == 2)"
@@ -175,7 +181,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "This function should return stats about the list:\n",
+    "The `stats` function should return more general stats about the list:\n",
+    "\n",
     "* Min value\n",
     "* Max value\n",
     "* Sum of all values\n",
@@ -209,6 +216,9 @@
     "    val mean: Double\n",
     "}\n",
     "\n",
+    "/**\n",
+    " * Implement me!\n",
+    " */\n",
     "fun stats(list: List<Int>): Stats = TODO()\n",
     "\n",
     "val stats = stats(listOf(1, 2, 3, 4, 5))\n",
@@ -299,10 +309,12 @@
    },
    "cell_type": "code",
    "source": [
-    "@Suppress(\"unused\")\n",
+    "/**\n",
+    " * Implement me!\n",
+    " */\n",
     "fun List<Int>.provider(): () -> Int? = TODO()\n",
     "\n",
-    "val provider = listOf(1,2,3).provider()\n",
+    "val provider = listOf(1, 2, 3).provider()\n",
     "\n",
     "require(provider() == 1)\n",
     "require(provider() == 2)\n",
@@ -405,6 +417,9 @@
     "    val mean: Double\n",
     "}\n",
     "\n",
+    "/**\n",
+    " * Implement me!\n",
+    " */\n",
     "fun stats(list: () -> Int?): Stats = TODO()\n",
     "\n",
     "fun List<Int>.provider(): () -> Int? = TODO() // The above util method\n",
@@ -484,7 +499,7 @@
    "source": [
     "In another bizarre twist of fate, it now turns out that our list traversal logic is noticed by our colleagues.  They see it as a stable and mature infrastructure, and they want to \"hook into\" our code with completely arbitary processing logic.  Make it generic!\n",
     "\n",
-    "The below example is a simple \"sum\" function which hooks into our wonderful machine:"
+    "The below example is a simple \"sum\" function which hooks into our wonderful machine, generically named `process`:"
    ]
   },
   {
@@ -497,13 +512,16 @@
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T10:10:44.354679Z",
-     "start_time": "2025-10-26T10:10:44.301995Z"
+     "end_time": "2025-10-26T14:16:06.817897Z",
+     "start_time": "2025-10-26T14:16:06.766394Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "fun <S> stats(list: () -> Int?, initial: () -> S, processor: (S, Int) -> S): S = TODO()\n",
+    "/**\n",
+    " * Implement me!\n",
+    " */\n",
+    "fun <S> process(list: () -> Int?, initial: () -> S, processor: (S, Int) -> S): S = TODO()\n",
     "\n",
     "fun List<Int>.provider(): () -> Int? = TODO() // Above util function\n",
     "\n",
@@ -511,10 +529,67 @@
     "val processor: (Int, Int) -> Int = { i1, i2 -> i1 + i2 }\n",
     "val provider = listOf(1, 2, 3, 4, 5).provider()\n",
     "\n",
-    "require(stats(provider, initial, processor) == 15)\n"
+    "require(process(provider, initial, processor) == 15)\n"
    ],
-   "outputs": [],
-   "execution_count": 25
+   "outputs": [
+    {
+     "ename": "kotlin.NotImplementedError",
+     "evalue": "An operation is not implemented.",
+     "output_type": "error",
+     "traceback": [
+      "kotlin.NotImplementedError: An operation is not implemented.",
+      "\tat Line_36_jupyter.provider(Line_36.jupyter.kts:6) at Cell In[35], line 6",
+      "\tat Line_36_jupyter.<init>(Line_36.jupyter.kts:10) at Cell In[35], line 10",
+      "\tat java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)",
+      "\tat java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)",
+      "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)",
+      "\tat kotlin.script.experimental.jvm.BasicJvmScriptEvaluator.evalWithConfigAndOtherScriptsResults(BasicJvmScriptEvaluator.kt:122)",
+      "\tat kotlin.script.experimental.jvm.BasicJvmScriptEvaluator.invoke$suspendImpl(BasicJvmScriptEvaluator.kt:48)",
+      "\tat kotlin.script.experimental.jvm.BasicJvmScriptEvaluator.invoke(BasicJvmScriptEvaluator.kt)",
+      "\tat kotlin.script.experimental.jvm.BasicJvmReplEvaluator.eval(BasicJvmReplEvaluator.kt:49)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.InternalEvaluatorImpl$eval$resultWithDiagnostics$1.invokeSuspend(InternalEvaluatorImpl.kt:137)",
+      "\tat kotlin.coroutines.jvm.internal.BaseContinuationImpl.resumeWith(ContinuationImpl.kt:34)",
+      "\tat kotlinx.coroutines.DispatchedTask.run(DispatchedTask.kt:100)",
+      "\tat kotlinx.coroutines.EventLoopImplBase.processNextEvent(EventLoop.common.kt:263)",
+      "\tat kotlinx.coroutines.BlockingCoroutine.joinBlocking(Builders.kt:94)",
+      "\tat kotlinx.coroutines.BuildersKt__BuildersKt.runBlocking(Builders.kt:70)",
+      "\tat kotlinx.coroutines.BuildersKt.runBlocking(Unknown Source)",
+      "\tat kotlinx.coroutines.BuildersKt__BuildersKt.runBlocking$default(Builders.kt:48)",
+      "\tat kotlinx.coroutines.BuildersKt.runBlocking$default(Unknown Source)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.InternalEvaluatorImpl.eval(InternalEvaluatorImpl.kt:137)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl.execute_W38Nk0s$lambda$0$1(CellExecutorImpl.kt:95)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.withHost(ReplForJupyterImpl.kt:730)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl.execute-W38Nk0s(CellExecutorImpl.kt:93)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.execution.CellExecutor.execute-W38Nk0s$default(CellExecutor.kt:14)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evaluateUserCode-wNURfNM(ReplForJupyterImpl.kt:591)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalExImpl(ReplForJupyterImpl.kt:472)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalEx$lambda$0(ReplForJupyterImpl.kt:466)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.withEvalContext(ReplForJupyterImpl.kt:448)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalEx(ReplForJupyterImpl.kt:465)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.processExecuteRequest$lambda$0$0$0(IdeCompatibleMessageRequestProcessor.kt:161)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedIn(IdeCompatibleMessageRequestProcessor.kt:351)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO$lambda$0$0(IdeCompatibleMessageRequestProcessor.kt:364)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedErr(IdeCompatibleMessageRequestProcessor.kt:341)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO$lambda$0(IdeCompatibleMessageRequestProcessor.kt:363)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedOut(IdeCompatibleMessageRequestProcessor.kt:334)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO(IdeCompatibleMessageRequestProcessor.kt:362)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.processExecuteRequest$lambda$0$0(IdeCompatibleMessageRequestProcessor.kt:160)",
+      "\tat org.jetbrains.kotlinx.jupyter.execution.JupyterExecutorImpl$Task.execute(JupyterExecutorImpl.kt:41)",
+      "\tat org.jetbrains.kotlinx.jupyter.execution.JupyterExecutorImpl.executorThread$lambda$0(JupyterExecutorImpl.kt:81)",
+      "\tat kotlin.concurrent.ThreadsKt$thread$thread$1.run(Thread.kt:30)",
+      "",
+      "kotlin.NotImplementedError: An operation is not implemented.",
+      "at Cell In[35], line 6"
+     ]
+    }
+   ],
+   "execution_count": 35
   }
  ],
  "metadata": {
