TLA-worthy naming

--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -225,12 +225,14 @@
       "Line_28_jupyter",
       "Line_27_jupyter",
       "Line_34_jupyter",
-      "Line_28_jupyter"
+      "Line_28_jupyter",
+      "Line_36_jupyter",
+      "Line_34_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T14:09:02.100745Z",
-     "start_time": "2025-10-26T14:09:01.914170Z"
+     "end_time": "2025-10-26T14:17:03.930021Z",
+     "start_time": "2025-10-26T14:17:03.759290Z"
     }
    },
    "cell_type": "code",
@@ -290,13 +292,13 @@
     "require(stats.sum == 15.toBigInteger())"
    ],
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 35
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "In another bizarre twist of fate, it now turns out that our list traversal logic is noticed by our colleagues.  They see it as a stable and mature infrastructure, and they want to \"hook into\" our code with completely arbitary processing logic.  Make it generic!\n",
+    "In another bizarre twist of fate, it now turns out that our stream processing engine is noticed by our colleagues.  They see it as a stable and mature infrastructure, and they want to \"hook into\" our code with completely arbitary processing logic.  Make it generic!\n",
     "\n",
     "The below example is a simple \"sum\" function which hooks into our wonderful machine, generically named `process`:"
    ]
@@ -311,12 +313,14 @@
       "Line_30_jupyter",
       "Line_25_jupyter",
       "Line_31_jupyter",
-      "Line_30_jupyter"
+      "Line_30_jupyter",
+      "Line_35_jupyter",
+      "Line_31_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T13:57:50.311805Z",
-     "start_time": "2025-10-26T13:57:50.258273Z"
+     "end_time": "2025-10-26T14:17:00.223818Z",
+     "start_time": "2025-10-26T14:17:00.148748Z"
     }
    },
    "cell_type": "code",
@@ -338,7 +342,7 @@
     "require(process(provider, initial, processor) == 15)\n"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 34
   }
  ],
  "metadata": {
