--- a/src/main/Lists.ipynb
+++ b/src/main/Lists.ipynb
@@ -497,7 +497,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "In another bizarre twist of fate, it now turns out that our list traversal logic is noticed by our colleagues.  They see it as a stable and mature infrastructure, and they want to \"hook into\" our code with completely arbitary processing logic.  Make it generic!\n",
+    "In another bizarre twist of fate, it now turns out that our stream processing engine is noticed by our colleagues.  They see it as a stable and mature infrastructure, and they want to \"hook into\" our code with completely arbitary processing logic.  Make it generic!\n",
     "\n",
     "The below example is a simple \"sum\" function which hooks into our wonderful machine, generically named `process`:"
    ]
