Use object for the simpler Stats case

--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -98,12 +98,14 @@
       "Line_21_jupyter",
       "Line_16_jupyter",
       "Line_33_jupyter",
-      "Line_21_jupyter"
+      "Line_21_jupyter",
+      "Line_37_jupyter",
+      "Line_8_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T14:07:53.880767Z",
-     "start_time": "2025-10-26T14:07:53.800188Z"
+     "end_time": "2025-10-26T16:28:15.089756Z",
+     "start_time": "2025-10-26T16:28:14.281351Z"
     }
    },
    "cell_type": "code",
@@ -118,19 +120,12 @@
     "    val mean: Double\n",
     "}\n",
     "\n",
-    "data class StatsImpl(\n",
-    "    override val min: Int,\n",
-    "    override val max: Int,\n",
-    "    override val sum: Long,\n",
-    "    override val mean: Double\n",
-    ") : Stats\n",
-    "\n",
-    "fun stats(list: List<Int>): Stats = StatsImpl(\n",
-    "    list.min(),\n",
-    "    list.max(),\n",
-    "    list.sumOf { it.toLong() },\n",
-    "    list.sumOf { it.toDouble() } / list.size,\n",
-    ")\n",
+    "fun stats(list: List<Int>): Stats = object : Stats {\n",
+    "    override val min = list.min()\n",
+    "    override val max = list.max()\n",
+    "    override val sum = list.sumOf { it.toLong() }\n",
+    "    override val mean = sum.toDouble() / list.size;\n",
+    "}\n",
     "\n",
     "val stats = stats(listOf(1, 2, 3, 4, 5))\n",
     "\n",
@@ -140,7 +135,7 @@
     "require(stats.sum == 15L)"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -227,12 +222,14 @@
       "Line_34_jupyter",
       "Line_28_jupyter",
       "Line_36_jupyter",
-      "Line_34_jupyter"
+      "Line_34_jupyter",
+      "Line_38_jupyter",
+      "Line_36_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T14:17:03.930021Z",
-     "start_time": "2025-10-26T14:17:03.759290Z"
+     "end_time": "2025-10-26T16:29:35.886175Z",
+     "start_time": "2025-10-26T16:29:35.468193Z"
     }
    },
    "cell_type": "code",
@@ -268,12 +265,8 @@
     "    )\n",
     "}\n",
     "\n",
-    "fun stats(list: () -> Int?): Stats {\n",
-    "    return generateSequence(list).fold(\n",
-    "        StatsImpl(),\n",
-    "        StatsImpl::plus\n",
-    "    )\n",
-    "}\n",
+    "fun stats(list: () -> Int?): Stats =\n",
+    "    generateSequence(list).fold(StatsImpl(), StatsImpl::plus)\n",
     "\n",
     "fun List<Int>.provider(): () -> Int? {\n",
     "    var index = 0\n",
@@ -292,7 +285,7 @@
     "require(stats.sum == 15.toBigInteger())"
    ],
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 37
   },
   {
    "metadata": {},
