Join in the operator fun

--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -180,7 +180,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "val provider = listOf(1,2,3).provider()\n",
+    "val provider = listOf(1, 2, 3).provider()\n",
     "\n",
     "require(provider() == 1)\n",
     "require(provider() == 2)\n",
@@ -257,7 +257,7 @@
     "            ?.let { (sum.div(it.toBigInteger())).toDouble() }\n",
     "            ?: 0.toDouble()\n",
     "\n",
-    "    fun plus(i: Int) = StatsImpl(\n",
+    "    operator fun plus(i: Int) = StatsImpl(\n",
     "        min(this.min, i),\n",
     "        max(this.max, i),\n",
     "        this.sum + i.toBigInteger(),\n",
@@ -266,7 +266,9 @@
     "}\n",
     "\n",
     "fun stats(list: () -> Int?): Stats =\n",
-    "    generateSequence(list).fold(StatsImpl(), StatsImpl::plus)\n",
+    "    generateSequence(list).fold(StatsImpl()) { stats, integer ->\n",
+    "        stats + integer\n",
+    "    }\n",
     "\n",
     "fun List<Int>.provider(): () -> Int? {\n",
     "    var index = 0\n",
