All prettier little providers

--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Did the solution make multiple passes through the list?  If so, we might need a re-think.\n",
+    "Did the solution make multiple passes through the list?  Or did it rely on sorting the input?  If so, we might need a re-think.\n",
     "\n",
     "It turns out the function now needs to handle a case where the list of numbers may be too big to hold in memory. Instead\n",
     "of passing the list, we instead pass a function that returns the next element in a (possibly long) series of numbers.\n",
@@ -162,21 +162,20 @@
       "Line_7_jupyter",
       "Line_24_jupyter",
       "Line_8_jupyter",
+      "Line_25_jupyter",
+      "Line_40_jupyter",
       "Line_25_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T13:56:38.102848Z",
-     "start_time": "2025-10-26T13:56:38.045490Z"
+     "end_time": "2025-10-26T16:51:11.478624Z",
+     "start_time": "2025-10-26T16:51:11.426565Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "fun List<Int>.provider(): () -> Int? {\n",
-    "    var index = 0\n",
-    "    return {\n",
-    "        takeIf { index < size }?.let { get(index).also { index++ } }\n",
-    "    }\n",
+    "fun List<Int>.provider(): () -> Int? = iterator().run {\n",
+    "    { takeIf { hasNext() }?.let { next() } }\n",
     "}\n",
     "\n",
     "val provider = listOf(1, 2, 3).provider()\n",
@@ -187,7 +186,7 @@
     "require(provider() == null)"
    ],
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -223,12 +222,14 @@
       "Line_36_jupyter",
       "Line_34_jupyter",
       "Line_38_jupyter",
-      "Line_36_jupyter"
+      "Line_36_jupyter",
+      "Line_39_jupyter",
+      "Line_16_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T16:29:35.886175Z",
-     "start_time": "2025-10-26T16:29:35.468193Z"
+     "end_time": "2025-10-26T16:51:08.387496Z",
+     "start_time": "2025-10-26T16:51:08.194252Z"
     }
    },
    "cell_type": "code",
@@ -269,11 +270,8 @@
     "        stats + integer\n",
     "    }\n",
     "\n",
-    "fun List<Int>.provider(): () -> Int? {\n",
-    "    var index = 0\n",
-    "    return {\n",
-    "        takeIf { index < size }?.let { get(index).also { index++ } }\n",
-    "    }\n",
+    "fun List<Int>.provider(): () -> Int? = iterator().run {\n",
+    "    { takeIf { hasNext() }?.let { next() } }\n",
     "}\n",
     "\n",
     "val provider = listOf(1, 2, 3, 4, 5).provider()\n",
@@ -286,7 +284,7 @@
     "require(stats.sum == 15.toBigInteger())"
    ],
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 38
   },
   {
    "metadata": {},
@@ -322,11 +320,8 @@
     "fun <S> process(list: () -> Int?, initial: () -> S, processor: (S, Int) -> S): S =\n",
     "    generateSequence(list).fold(initial(), processor)\n",
     "\n",
-    "fun List<Int>.provider(): () -> Int? {\n",
-    "    var index = 0\n",
-    "    return {\n",
-    "        takeIf { index < size }?.let { get(index).also { index++ } }\n",
-    "    }\n",
+    "fun List<Int>.provider(): () -> Int? = iterator().run {\n",
+    "    { takeIf { hasNext() }?.let { next() } }\n",
     "}\n",
     "\n",
     "val initial = { 0 }\n",
