--- a/src/main/Lists.ipynb
+++ b/src/main/Lists.ipynb
@@ -292,7 +292,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Did the solution make multiple passes through the list?  If so, we might need a re-think.\n",
+    "Did the solution make multiple passes through the list?  Or did it rely on sorting the input?  If so, we might need a re-think.\n",
     "\n",
     "It turns out the function now needs to handle a case where the list of numbers may be too big to hold in memory. Instead\n",
     "of passing the list, we instead pass a function that returns the next element in a (possibly long) series of numbers.\n",
